--- a/API CoinPaprika/gradle/libs.versions.toml
+++ b/API CoinPaprika/gradle/libs.versions.toml
@@ -13,9 +13,11 @@ retrofit = "2.9.0"
 gson = "2.9.0"
 navigationRuntimeKtx = "2.8.4"
 navigationCompose = "2.8.4"
+coilCompose = "3.0.3"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coilCompose" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
