--- a/LojaOnline/gradle/libs.versions.toml
+++ b/LojaOnline/gradle/libs.versions.toml
@@ -1,13 +1,17 @@
 [versions]
 agp = "8.1.1"
 compose = "1.5.3" # Updated to match Kotlin 2.0.0
+datastoreCore = "1.0.0"
 datastorePreferences = "1.1.1"
+datastorePreferencesVersion = "1.0.0"
+javaxInject = "1"
 kotlin = "1.9.10" # Correct Kotlin version for compatibility
 coreKtx = "1.10.1"
 junit = "4.13.2"
 junitVersion = "1.1.5"
 espressoCore = "3.5.1"
 lifecycleRuntimeKtx = "2.6.1"
+lifecycleRuntimeKtxVersion = "2.8.7"
 lifecycleViewModelCompose = "2.6.1"
 activityCompose = "1.7.2"
 composeBom = "2024.04.01"
@@ -22,8 +26,13 @@ datastorePreferencesCoreJvm = "1.1.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-datastore-core = { module = "androidx.datastore:datastore-core", version.ref = "datastorePreferences" }
+androidx-datastore-core-v100 = { module = "androidx.datastore:datastore-core", version.ref = "datastoreCore" }
 androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
+androidx-datastore-preferences-v100 = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferencesVersion" }
+androidx-lifecycle-runtime-ktx-v287 = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtxVersion" }
 coil-compose = { group = "io.coil-kt", name = "coil-compose", version.ref = "coilCompose" }
+javax-inject = { module = "javax.inject:javax.inject", version.ref = "javaxInject" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
